--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
-Rodrigo Magnus
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="icon.png">
+    <title>Aula 02</title>
+    <style>
+        /* Estilo para o container */
+        .container {
+            width: 400px;
+            margin: 0 auto;
+            text-align: center;
+            background-color: #e6e6e6; /* Fundo preto */
+            padding: 40px; /* Padding de 40px no fundo */
+        }
+
+        /* Estilo para as tags de cabeçalho */
+        h1 {
+            color: #000000;
+            font-size: 40px;
+            font-family: Helvetica, sans-serif;
+        }
+
+        h2 {
+            color: #494949;
+            font-size: 22px;
+            font-family: Helvetica, sans-serif;
+        }
+
+        p {
+            color: #a5a5a5;
+            font-family: Helvetica, sans-serif;
+            font-size: 12px;
+        }
+
+        /* Estilo para a imagem */
+        img {
+            max-width: 100%; /* Define a largura máxima para a imagem */
+            height: auto; /* Mantém a proporção da imagem */
+            margin-top: 20px; /* Espaçamento entre a imagem e o parágrafo */
+        }
+    </style>
 </head>
+
 <body>
-    Meu nome é Rodrigo Magnus
+    <div class="container">
+        <h1>Rodrigo Magnus</h1>
+        <h2>Aula 02 - Coderhouse</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget leo vel augue facilisis feugiat. Curabitur eget imperdiet tortor, eu pretium tellus. In ullamcorper quis purus ut feugiat. Sed vitae nibh nec diam laoreet scelerisque. Aenean feugiat ligula diam, ultrices elementum metus feugiat quis. Quisque tincidunt facilisis gravida. Nulla nibh turpis, condimentum eget urna sit amet, consequat fermentum risus.</p> Imagem de teste ↓
+        <img src="https://images.unsplash.com/photo-1661956603025-8310b2e3036d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Foto Unsplash">
+    </div>
 </body>
+
 </html>
